@@ -1,61 +1,49 @@
-// 혼밥 맛집 목록 조회 서비스의 검색, 캐시 저장, 응답 조립을 검증한다.
+// 혼밥 맛집 목록 서비스가 place_cache 근처 조회 결과를 응답으로 조립하는지 검증한다.
 package com.sopt.nearby.place.application;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.sopt.nearby.place.domain.exception.DuplicatePlaceCacheException;
 import com.sopt.nearby.place.domain.exception.GooglePlaceApiException;
 import com.sopt.nearby.place.domain.exception.InvalidSoloDiningPlacesRequestException;
 import com.sopt.nearby.place.domain.model.PlaceBusinessStatus;
-import com.sopt.nearby.place.domain.model.PlaceCache;
 import com.sopt.nearby.place.domain.model.SoloDiningPlaceCategory;
 import com.sopt.nearby.place.domain.model.SoloDiningPlaceSummary;
 import com.sopt.nearby.place.port.in.ResolvePlaceImageCommand;
 import com.sopt.nearby.place.port.in.ResolvePlaceImageUseCase;
 import com.sopt.nearby.place.port.in.ResolvedPlaceImage;
-import com.sopt.nearby.place.port.out.PlaceCacheRepository;
 import com.sopt.nearby.place.port.out.SoloDiningPlaceQueryPort;
-import com.sopt.nearby.place.port.out.SoloDiningPlaceSearchPort;
-import com.sopt.nearby.place.port.out.SoloDiningPlaceSearchRequest;
-import com.sopt.nearby.place.port.out.SoloDiningPlaceSearchResult;
 import java.math.BigDecimal;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.IntStream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 class ReadSoloDiningPlacesServiceTest {
 
-    private FakeSoloDiningPlaceSearchPort searchPort;
-    private FakePlaceCacheRepository placeCacheRepository;
     private FakeSoloDiningPlaceQueryPort queryPort;
     private FakeResolvePlaceImageUseCase resolvePlaceImageUseCase;
     private ReadSoloDiningPlacesService service;
 
     @BeforeEach
     void setUp() {
-        searchPort = new FakeSoloDiningPlaceSearchPort();
-        placeCacheRepository = new FakePlaceCacheRepository();
         queryPort = new FakeSoloDiningPlaceQueryPort();
         resolvePlaceImageUseCase = new FakeResolvePlaceImageUseCase();
-        service = new ReadSoloDiningPlacesService(
-                searchPort,
-                placeCacheRepository,
-                queryPort,
-                resolvePlaceImageUseCase
-        );
+        service = new ReadSoloDiningPlacesService(queryPort, resolvePlaceImageUseCase);
     }
 
     @Test
-    void searchesGoogleCachesPlacesAndReturnsFavoriteAwarePlaces() {
-        searchPort.result = List.of(searchResult("google-place-id", "니어바이 카페", SoloDiningPlaceCategory.CAFE));
-        queryPort.result = List.of(summary(1L, true));
+    void readsAllNearbyCachedPlacesWithoutResultLimit() {
+        queryPort.result = IntStream.rangeClosed(1, 21)
+                .mapToObj(index -> summary((long) index, "google-place-" + index, "장소 " + index, false))
+                .toList();
 
         SoloDiningPlacesResult result = service.read(new ReadSoloDiningPlacesCommand(
                 7L,
@@ -64,30 +52,18 @@ class ReadSoloDiningPlacesServiceTest {
                 SoloDiningPlaceCategory.CAFE
         ));
 
-        assertEquals(new BigDecimal("37.56650000"), searchPort.request.latitude());
-        assertEquals(new BigDecimal("126.97800000"), searchPort.request.longitude());
-        assertEquals(1000, searchPort.request.radiusMeters());
-        assertEquals(20, searchPort.request.maxResultCount());
-        assertEquals(List.of("cafe"), searchPort.request.includedTypes());
-        assertEquals("google-place-id", placeCacheRepository.saved.googlePlaceId());
-        assertEquals("니어바이 카페", placeCacheRepository.saved.name());
-        assertEquals(new BigDecimal("4.30"), placeCacheRepository.saved.rating());
         assertEquals(7L, queryPort.userId);
-        assertEquals(List.of(1L), queryPort.placeIds);
-        assertEquals(1, result.places().size());
-        assertEquals("니어바이 카페", result.places().get(0).name());
-        assertEquals(true, result.places().get(0).isFavorite());
-        assertEquals("https://lh3.googleusercontent.com/google-place-id.jpg", result.places().get(0).imageUrl());
-        assertEquals("places/google-place-id/photos/photo-resource",
-                resolvePlaceImageUseCase.commands.getFirst().photoReference());
+        assertEquals(new BigDecimal("37.56650000"), queryPort.latitude);
+        assertEquals(new BigDecimal("126.97800000"), queryPort.longitude);
+        assertEquals(SoloDiningPlaceCategory.CAFE, queryPort.category);
+        assertEquals(1000, queryPort.radiusMeters);
+        assertEquals(21, result.places().size());
+        assertEquals("장소 1", result.places().getFirst().name());
+        assertEquals("장소 21", result.places().getLast().name());
     }
 
     @Test
     void resolvesImagesConcurrentlyWhileKeepingPlaceOrder() {
-        searchPort.result = List.of(
-                searchResult("google-place-1", "첫 번째 식당", SoloDiningPlaceCategory.RESTAURANT),
-                searchResult("google-place-2", "두 번째 식당", SoloDiningPlaceCategory.RESTAURANT)
-        );
         queryPort.result = List.of(
                 summary(1L, "google-place-1", "첫 번째 식당", false),
                 summary(2L, "google-place-2", "두 번째 식당", true)
@@ -103,130 +79,29 @@ class ReadSoloDiningPlacesServiceTest {
     }
 
     @Test
+    void limitsConcurrentImageResolutionsWithoutTruncatingPlaces() {
+        queryPort.result = IntStream.rangeClosed(1, 11)
+                .mapToObj(index -> summary((long) index, "google-place-" + index, "장소 " + index, false))
+                .toList();
+        resolvePlaceImageUseCase.blockFirstCalls(10);
+
+        CompletableFuture<SoloDiningPlacesResult> future = CompletableFuture.supplyAsync(
+                () -> service.read(validCommand())
+        );
+
+        assertTrue(resolvePlaceImageUseCase.awaitBlockedCalls());
+        assertFalse(resolvePlaceImageUseCase.awaitOverflowCall());
+        assertEquals(10, resolvePlaceImageUseCase.maxConcurrentCalls());
+        resolvePlaceImageUseCase.releaseBlockedCalls();
+        assertEquals(11, future.join().places().size());
+    }
+
+    @Test
     void propagatesBusinessExceptionFromParallelImageResolution() {
-        searchPort.result = List.of(searchResult(
-                "google-place-id",
-                "니어바이 카페",
-                SoloDiningPlaceCategory.CAFE
-        ));
-        queryPort.result = List.of(summary(1L, false));
+        queryPort.result = List.of(summary(1L, "google-place-id", "니어바이 카페", false));
         resolvePlaceImageUseCase.exception = new GooglePlaceApiException();
 
         assertThrows(GooglePlaceApiException.class, () -> service.read(validCommand()));
-    }
-
-    @Test
-    void searchesAllSoloDiningTypesWhenCategoryIsMissing() {
-        service.read(new ReadSoloDiningPlacesCommand(
-                7L,
-                new BigDecimal("37.56650000"),
-                new BigDecimal("126.97800000"),
-                null
-        ));
-
-        assertEquals(List.of("restaurant", "cafe", "pub"), searchPort.request.includedTypes());
-    }
-
-    @Test
-    void updatesExistingCacheInsteadOfCreatingDuplicate() {
-        placeCacheRepository.places.put("google-place-id", new PlaceCache(
-                9L,
-                "google-place-id",
-                "예전 이름",
-                "예전 주소",
-                new BigDecimal("37.00000000"),
-                new BigDecimal("126.00000000"),
-                "RESTAURANT",
-                "02-1234-5678",
-                null,
-                null,
-                null,
-                PlaceBusinessStatus.UNKNOWN
-        ));
-        searchPort.result = List.of(searchResult("google-place-id", "새 이름", SoloDiningPlaceCategory.RESTAURANT));
-        queryPort.result = List.of(summary(9L, false));
-
-        service.read(validCommand());
-
-        assertEquals(9L, placeCacheRepository.saved.id());
-        assertEquals("새 이름", placeCacheRepository.saved.name());
-        assertEquals("02-1234-5678", placeCacheRepository.saved.phoneNumber());
-        assertEquals(List.of(9L), queryPort.placeIds);
-    }
-
-    @Test
-    void preservesMeaningfulExistingCategoryWhenUpdatingCache() {
-        placeCacheRepository.places.put("google-place-id", new PlaceCache(
-                9L,
-                "google-place-id",
-                "예전 이름",
-                "예전 주소",
-                new BigDecimal("37.00000000"),
-                new BigDecimal("126.00000000"),
-                "MUSEUM",
-                null,
-                null,
-                null,
-                null,
-                PlaceBusinessStatus.UNKNOWN
-        ));
-        searchPort.result = List.of(searchResult("google-place-id", "새 이름", SoloDiningPlaceCategory.CAFE));
-        queryPort.result = List.of(summary(9L, false));
-
-        service.read(validCommand());
-
-        assertEquals("MUSEUM", placeCacheRepository.saved.category());
-    }
-
-    @Test
-    void replacesOtherExistingCategoryWithGoogleCategoryWhenUpdatingCache() {
-        placeCacheRepository.places.put("google-place-id", new PlaceCache(
-                9L,
-                "google-place-id",
-                "예전 이름",
-                "예전 주소",
-                new BigDecimal("37.00000000"),
-                new BigDecimal("126.00000000"),
-                "OTHER",
-                null,
-                null,
-                null,
-                null,
-                PlaceBusinessStatus.UNKNOWN
-        ));
-        searchPort.result = List.of(searchResult("google-place-id", "새 이름", SoloDiningPlaceCategory.CAFE));
-        queryPort.result = List.of(summary(9L, false));
-
-        service.read(validCommand());
-
-        assertEquals("CAFE", placeCacheRepository.saved.category());
-    }
-
-    @Test
-    void reloadsExistingPlaceWhenConcurrentSaveCreatesDuplicatePlaceCache() {
-        searchPort.result = List.of(searchResult("google-place-id", "니어바이 카페", SoloDiningPlaceCategory.CAFE));
-        queryPort.result = List.of(summary(3L, false));
-        placeCacheRepository.saveException = new DuplicatePlaceCacheException(new RuntimeException());
-        placeCacheRepository.existingAfterConflict = new PlaceCache(
-                3L,
-                "google-place-id",
-                "니어바이 카페",
-                "서울특별시 중구 세종대로 110",
-                new BigDecimal("37.56612000"),
-                new BigDecimal("126.97845000"),
-                "CAFE",
-                null,
-                new BigDecimal("4.30"),
-                22870,
-                "places/google-place-id/photos/photo-resource",
-                PlaceBusinessStatus.OPERATIONAL
-        );
-
-        service.read(validCommand());
-
-        assertEquals(1, placeCacheRepository.saveAttempts);
-        assertEquals(2, placeCacheRepository.findAttempts);
-        assertEquals(List.of(3L), queryPort.placeIds);
     }
 
     @Test
@@ -255,29 +130,6 @@ class ReadSoloDiningPlacesServiceTest {
         );
     }
 
-    private SoloDiningPlaceSearchResult searchResult(
-            final String googlePlaceId,
-            final String name,
-            final SoloDiningPlaceCategory category
-    ) {
-        return new SoloDiningPlaceSearchResult(
-                googlePlaceId,
-                name,
-                "서울특별시 중구 세종대로 110",
-                new BigDecimal("37.56612000"),
-                new BigDecimal("126.97845000"),
-                category,
-                new BigDecimal("4.30"),
-                22870,
-                "places/google-place-id/photos/photo-resource",
-                PlaceBusinessStatus.OPERATIONAL
-        );
-    }
-
-    private SoloDiningPlaceSummary summary(final Long placeId, final boolean favorite) {
-        return summary(placeId, "google-place-id", "니어바이 카페", favorite);
-    }
-
     private SoloDiningPlaceSummary summary(
             final Long placeId,
             final String googlePlaceId,
@@ -301,76 +153,30 @@ class ReadSoloDiningPlacesServiceTest {
         );
     }
 
-    private static final class FakeSoloDiningPlaceSearchPort implements SoloDiningPlaceSearchPort {
-
-        private SoloDiningPlaceSearchRequest request;
-        private List<SoloDiningPlaceSearchResult> result = List.of();
-
-        @Override
-        public List<SoloDiningPlaceSearchResult> search(final SoloDiningPlaceSearchRequest request) {
-            this.request = request;
-            return result;
-        }
-    }
-
-    private static final class FakePlaceCacheRepository implements PlaceCacheRepository {
-
-        private final Map<String, PlaceCache> places = new HashMap<>();
-        private DuplicatePlaceCacheException saveException;
-        private PlaceCache existingAfterConflict;
-        private PlaceCache saved;
-        private int findAttempts;
-        private int saveAttempts;
-
-        @Override
-        public PlaceCache save(final PlaceCache model) {
-            saveAttempts++;
-            if (saveException != null) {
-                places.put(existingAfterConflict.googlePlaceId(), existingAfterConflict);
-                throw saveException;
-            }
-            saved = model.id() == null ? withId(model, places.size() + 1L) : model;
-            places.put(saved.googlePlaceId(), saved);
-            return saved;
-        }
-
-        @Override
-        public Optional<PlaceCache> findById(final Long id) {
-            return places.values()
-                    .stream()
-                    .filter(place -> place.id().equals(id))
-                    .findFirst();
-        }
-
-        @Override
-        public Optional<PlaceCache> findByGooglePlaceId(final String googlePlaceId) {
-            findAttempts++;
-            return Optional.ofNullable(places.get(googlePlaceId));
-        }
-
-        private PlaceCache withId(final PlaceCache model, final Long id) {
-            return new PlaceCache(
-                    id,
-                    model.googlePlaceId(),
-                    model.name(),
-                    model.address(),
-                    model.latitude(),
-                    model.longitude(),
-                    model.category(),
-                    model.phoneNumber(),
-                    model.rating(),
-                    model.reviewCount(),
-                    model.photoReference(),
-                    model.businessStatus()
-            );
-        }
-    }
-
     private static final class FakeSoloDiningPlaceQueryPort implements SoloDiningPlaceQueryPort {
 
         private Long userId;
-        private List<Long> placeIds;
+        private BigDecimal latitude;
+        private BigDecimal longitude;
+        private SoloDiningPlaceCategory category;
+        private int radiusMeters;
         private List<SoloDiningPlaceSummary> result = List.of();
+
+        @Override
+        public List<SoloDiningPlaceSummary> findAllNearby(
+                final Long userId,
+                final BigDecimal latitude,
+                final BigDecimal longitude,
+                final SoloDiningPlaceCategory category,
+                final int radiusMeters
+        ) {
+            this.userId = userId;
+            this.latitude = latitude;
+            this.longitude = longitude;
+            this.category = category;
+            this.radiusMeters = radiusMeters;
+            return result;
+        }
 
         @Override
         public List<SoloDiningPlaceSummary> findAllByPlaceIds(
@@ -379,34 +185,70 @@ class ReadSoloDiningPlacesServiceTest {
                 final BigDecimal longitude,
                 final List<Long> placeIds
         ) {
-            this.userId = userId;
-            this.placeIds = placeIds;
-            return result;
+            return List.of();
         }
     }
 
     private static final class FakeResolvePlaceImageUseCase implements ResolvePlaceImageUseCase {
 
         private final List<ResolvePlaceImageCommand> commands = new CopyOnWriteArrayList<>();
+        private final AtomicInteger resolutionCalls = new AtomicInteger();
+        private final AtomicInteger activeCalls = new AtomicInteger();
+        private final AtomicInteger maxConcurrentCalls = new AtomicInteger();
         private CountDownLatch concurrentCalls;
+        private CountDownLatch blockedCalls;
+        private CountDownLatch releaseBlockedCalls;
+        private CountDownLatch overflowCall;
+        private int blockedCallCount;
         private RuntimeException exception;
 
         private void expectConcurrentCalls(final int count) {
             concurrentCalls = new CountDownLatch(count);
         }
 
+        private void blockFirstCalls(final int count) {
+            blockedCallCount = count;
+            blockedCalls = new CountDownLatch(count);
+            releaseBlockedCalls = new CountDownLatch(1);
+            overflowCall = new CountDownLatch(1);
+        }
+
+        private boolean awaitBlockedCalls() {
+            return await(blockedCalls, 1, TimeUnit.SECONDS);
+        }
+
+        private boolean awaitOverflowCall() {
+            return await(overflowCall, 100, TimeUnit.MILLISECONDS);
+        }
+
+        private int maxConcurrentCalls() {
+            return maxConcurrentCalls.get();
+        }
+
+        private void releaseBlockedCalls() {
+            releaseBlockedCalls.countDown();
+        }
+
         @Override
         public ResolvedPlaceImage resolve(final ResolvePlaceImageCommand command) {
-            commands.add(command);
-            awaitConcurrentCalls();
-            if (exception != null) {
-                throw exception;
+            int callNumber = resolutionCalls.incrementAndGet();
+            int activeCallCount = activeCalls.incrementAndGet();
+            maxConcurrentCalls.accumulateAndGet(activeCallCount, Math::max);
+            try {
+                commands.add(command);
+                awaitConcurrentCalls();
+                awaitBlockedCalls(callNumber);
+                if (exception != null) {
+                    throw exception;
+                }
+                return new ResolvedPlaceImage(
+                        "https://lh3.googleusercontent.com/" + command.googlePlaceId() + ".jpg",
+                        ResolvedPlaceImage.GOOGLE_MAPS,
+                        List.of()
+                );
+            } finally {
+                activeCalls.decrementAndGet();
             }
-            return new ResolvedPlaceImage(
-                    "https://lh3.googleusercontent.com/" + command.googlePlaceId() + ".jpg",
-                    ResolvedPlaceImage.GOOGLE_MAPS,
-                    List.of()
-            );
         }
 
         private void awaitConcurrentCalls() {
@@ -421,6 +263,29 @@ class ReadSoloDiningPlacesServiceTest {
             } catch (InterruptedException exception) {
                 Thread.currentThread().interrupt();
                 throw new AssertionError("병렬 이미지 조회 대기가 중단되었습니다.", exception);
+            }
+        }
+
+        private void awaitBlockedCalls(final int callNumber) {
+            if (blockedCalls == null) {
+                return;
+            }
+            if (callNumber > blockedCallCount) {
+                overflowCall.countDown();
+                return;
+            }
+            blockedCalls.countDown();
+            if (!await(releaseBlockedCalls, 1, TimeUnit.SECONDS)) {
+                throw new AssertionError("이미지 조회 제한 대기가 해제되지 않았습니다.");
+            }
+        }
+
+        private boolean await(final CountDownLatch latch, final long timeout, final TimeUnit unit) {
+            try {
+                return latch.await(timeout, unit);
+            } catch (InterruptedException exception) {
+                Thread.currentThread().interrupt();
+                throw new AssertionError("이미지 조회 대기가 중단되었습니다.", exception);
             }
         }
     }
